fix page bottom padding on mobile

--- a/src/client/pages/home.module.scss
+++ b/src/client/pages/home.module.scss
@@ -50,10 +50,6 @@
 }
 
 @media (max-width: 760px) {
-  .home-shell {
-    padding-bottom: 7.5rem;
-  }
-
   .home-inline-editor {
     display: none;
   }
