--- a/src/client/pages/room.module.scss
+++ b/src/client/pages/room.module.scss
@@ -177,10 +177,6 @@
 }
 
 @media (max-width: 760px) {
-  .room-shell {
-    padding-bottom: 7.5rem;
-  }
-
   .hide-on-mobile {
     display: none;
   }
